--- a/index.html
+++ b/index.html
@@ -9,74 +9,7 @@
   <!-- Import Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #f9f9f9;
-      margin: 20px;
-    }
-
-    .card {
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-
-    .pink {
-      background-color: #ffd6eb;
-    }
-
-    .orange {
-      background-color: #ffe0b3;
-    }
-
-    .blue {
-      background-color: #d6ecff;
-    }
-
-    h1 {
-      margin: 0;
-      text-align: center;
-      font-weight: 600;
-    }
-
-    h3 {
-      text-align: center;
-      margin-top: 5px;
-      font-weight: 400;
-    }
-
-    h4 {
-      margin-bottom: 10px;
-      font-weight: 500;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 10px;
-      background-color: #fff;
-    }
-
-    th,
-    td {
-      border: 1px solid #333;
-      text-align: center;
-      padding: 8px;
-      font-size: 14px;
-    }
-
-    th {
-      background-color: #f5b7b1;
-      font-weight: 500;
-    }
-
-    /* striped rows */
-    tr:nth-child(even) td {
-      background-color: #fdf2f8;
-    }
-  </style>
+  <link rel="stylesheet" href="app.css">
 </head>
 
 <body>
@@ -171,6 +104,12 @@
         <td></td>
       </tr>
     </table>
+    
+    <a href="https://www.english.metro.tokyo.lg.jp/" target="_blank" rel="noopener noreferrer" title="Click to open the website">Tokyo City Official Website</a>
+
+    <hr>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/nbDELn6VxpE?si=0FvlNIc0gBi1s0Wi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
 </body>
 
